--- a/PhotoArchiver.Tests/PhotoArchiver.Tests.csproj
+++ b/PhotoArchiver.Tests/PhotoArchiver.Tests.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
+		<PackageReference Include="MSTest.TestAdapter" Version="2.*" />
+		<PackageReference Include="MSTest.TestFramework" Version="2.*" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\PhotoArchiver\PhotoArchiver.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\PhotoArchiver\PhotoArchiver.csproj" />
+	</ItemGroup>
 
 </Project>
