--- a/src/PhotoArchiver.Console/PhotoArchiver.Console.csproj
+++ b/src/PhotoArchiver.Console/PhotoArchiver.Console.csproj
@@ -17,4 +17,11 @@
 		<ProjectReference Include="..\PhotoArchiver\PhotoArchiver.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Compile Remove="Logs\**" />
+		<Content Remove="Logs\**" />
+		<EmbeddedResource Remove="Logs\**" />
+		<None Remove="Logs\**" />
+	</ItemGroup>
+
 </Project>
