--- a/src/PhotoArchiver.Console/PhotoArchiver.Console.csproj
+++ b/src/PhotoArchiver.Console/PhotoArchiver.Console.csproj
@@ -2,15 +2,15 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<Version>2.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.*" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.*" />
+		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="*" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="*" />
 	</ItemGroup>
 
 	<ItemGroup>
