--- a/src/PhotoArchiver/PhotoArchiver.csproj
+++ b/src/PhotoArchiver/PhotoArchiver.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<Version>2.0.0</Version>
@@ -9,22 +9,22 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.Storage.Blobs" Version="12.*" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="*" />
 		<PackageReference Include="MetadataExtractor" Version="2.*" />
 		<PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.ComputerVision" Version="7.*" />
 		<PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.Face" Version="2.*-*" />
-		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.*">
+		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.*" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.*" />
-		<PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.*" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="6.*" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="*" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="*" />
+		<PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="*" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="*" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="2.*" />
-		<PackageReference Include="System.Interactive.Async" Version="4.*" />
-		<PackageReference Include="System.Text.Json" Version="6.*" />
+		<PackageReference Include="System.Interactive.Async" Version="*" />
+		<PackageReference Include="System.Text.Json" Version="*" />
 	</ItemGroup>
 
 </Project>
