--- a/test/PhotoArchiver.Tests/PhotoArchiver.Tests.csproj
+++ b/test/PhotoArchiver.Tests/PhotoArchiver.Tests.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.*" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.*" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="*" />
+		<PackageReference Include="MSTest.TestAdapter" Version="*" />
+		<PackageReference Include="MSTest.TestFramework" Version="*" />
 	</ItemGroup>
 
 	<ItemGroup>
